maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:12: error: not found: value prendreBiscuit
	prendreBiscuit()
        ^